Login LogOut Fixed Password

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -81,39 +81,40 @@
                 <section class="login_form col-10 ">
                     <h1 class="font-weight-bold py-3">Tailor Management System</h1>
                             {% if reg_comp%}
-                            <form class="row">
+                            <form class="row" action="register" method="post" enctype="multipart/form-data">
+                               {% csrf_token %}
                                 <section class="col-8">
                                     <Label>Company Detail</Label>
                                     <div class="form-row">
-                                        <input type="text" placeholder="Company Name" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder="Company Name" name="c_name" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
-                                        <input type="text" placeholder="Company number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder="Company number" name="c_number" pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
-                                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder="Address" name="c_address" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
                                         <label for="Insert_img"> <h5>InsertLogo</h5></label>
-                                        <input id="uploadImage" type="file" name="image" onchange="PreviewImage(); required">
+                                        <input id="uploadImage" type="file" name="c_image" onchange="PreviewImage(); required">
                                     </div>
                                     <hr>
                                     <Label>Owner Detail</Label>
                                     <div class="form-row">
-                                        <input type="text" placeholder=" Name" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder=" Name" name="name" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                    
                                     <div class="form-row">
-                                        <input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
+                                        <input type="email" placeholder="Email address" name="email" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
-                                        <input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder="Phone number" name="number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
-                                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
+                                        <input type="text" placeholder="Address" name="address" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
-                                        <input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
+                                        <input type="password" placeholder="Password" name="password" class="form-control rounded-pill my-3 p-2">
                                     </div>
                                     <div class="form-row">
                                         <label for="Insert_img"> <h5>Insert photo</h5></label>
