--- a/templates/customer.html
+++ b/templates/customer.html
@@ -36,14 +36,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for cust in customer%}
+                {% for o in order%}
                     <tr>
-                        <th scope="row">{{cust.id}}</th>
+                        <th scope="row">{{o.customer_measurement.customer.id}}</th>
 <!--                                    <td><img src="/media/login.jpg" alt="" class="customer-photo" name="photo"></td>-->
-                        <td><a href="#"><label for="name" name="name">{{cust.name}}</label></a></td>
-                        <td><label for="order-date" name="order-date"></label></td>
-                        <td><label for="number" name="number">{{cust.number}}</label></td>
-                        <td><label for="email" name="email">{{cust.email}}</label></td>
+                        <td><a href="#"><label for="name" name="name">{{o.customer_measurement.customer.name}}</label></a></td>
+                        <td><label for="order-date" name="order-date">{{o.orderdate}}</label></td>
+                        <td><label for="number" name="number">{{o.customer_measurement.customer.number}}</label></td>
+                        <td><label for="email" name="email">{{o.customer_measurement.customer.email}}</label></td>
                         <td><label for="total" name="total"></label></td>
                         <td><label for="advance" name="advance"></label></td>
                         <td><label for="remaning" name="remaining"></label></td>
