--- a/static/css/measurement.css
+++ b/static/css/measurement.css
@@ -1,5 +1,5 @@
 .customer_photo{
-    box-shadow:  5px 10px 18px grey;
+    box-shadow:  0px 7px 20px 0px rgba(0,0,0,0.5);
     border-radius: 50%;
     margin-left: 3%;
     width: 200px;
