--- a/templates/employee.html
+++ b/templates/employee.html
@@ -24,34 +24,12 @@
     }
 </style>
 <div class="container-fluid">
-    <!-- <div id="slide" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img class="d-block w-100" src="/media/home.jpg" alt="First slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/media/login.jpg" alt="Second slide">
-          </div>
-          <div class="carousel-item">
-            <img class="d-block w-100" src="/media/home.jpg" alt="Third slide">
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#slide" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#slide" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div> -->
-    <div class="card text-light bg-dark mb-3 row" >
+    <div class="card text-dark mb-3 row" >
         <div class="card-header">
             <h2 class="myfont">Employee Detail</h2>
         </div>
-            <div class="card-body d-flex mx-auto row">
-              
-              {% if not reg_emp%}
+        <div class="card-body d-flex mx-auto row">
+            {% if not reg_emp%}
                 <div class="col-5 photo">
                     <img src="/media/login.jpg" alt="No_Image_found" class="employee_photo">
                 </div>
@@ -61,44 +39,43 @@
                     <p class="employee_label">E-mail:</p><label for="email" name="email"></label>
                     <p class="employee_label">Phone-number:</p><label for="number" name="number"></label>
                 </div>
-                
-            </div>
             
             <div class="row mb-3 mx-1">
                 <p class="employee_label">No. of Order Count:</p><label for="ordernumber" name="order_count"></label>
-                    
-                    <button class="btn btn-secondary mb-1">Send Measurement</button>
-                    <button class="btn btn-secondary">Email/Message</button>
+                <button class="btn btn-secondary mb-1">Send Measurement</button>
+                <button class="btn btn-secondary">Email/Message</button>
             </div>
             {% endif%}
+               
             {% if reg_emp %}
-                            <form class="row">
-                                <section class="col-8">
-                                    <div class="form-row">
-                                        <input type="text" placeholder=" Name" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                   
-                                    <div class="form-row">
-                                        <input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <label for="Insert_img"> <h5>Insert photo</h5></label>
-                                        <input type="file" name="owner_image" >
-                                    </div>
-                                    <button class="btn btn-dark">Register</button>
-                                </section>
-                                <section class="col-4"></section>
-                            </form>
-                            {% endif %}
+            <form class="row">
+                <section class="col-8">
+                    <div class="form-row">
+                        <input type="text" placeholder=" Name" class="form-control rounded-pill my-3 p-2">
+                    </div>
+                    
+                    <div class="form-row">
+                        <input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
+                    </div>
+                    <div class="form-row">
+                        <input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
+                    </div>
+                    <div class="form-row">
+                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
+                    </div>
+                    <div class="form-row">
+                        <input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
+                    </div>
+                    <div class="form-row">
+                        <label for="Insert_img"> <h5>Insert photo</h5></label>
+                        <input type="file" name="emp_image" >
+                    </div>
+                    <button class="btn btn-dark">Register</button>
+                </section>
+                <section class="col-4"></section>
+            </form>
+            {% endif %}
+        </div>
     </div>
 </div>
 <div class="container-fluid ">
