--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -15,13 +15,6 @@
             margin-top: 15px;
             margin-bottom: 10px;
         }
-        .welcome_img{
-            border-radius: 50%;
-            box-shadow: 10px 15px 50px rgba(52, 54, 54, 0.719);
-            width:400px;
-            height: 60vh;
-            margin: 20px;
-        }
         .header_container{
             box-shadow: 0px 10px 10px rgba(52, 54, 54, 0.1) ;
             border-bottom: solid rgba(52, 54, 54, 0.1);
@@ -31,11 +24,7 @@
             background-color: rgba(233, 233, 233, 0.171);
             box-shadow: 10px 10px 25px whitesmoke;
         }
-        .main-row{
-            padding-top: 25px;
-            margin-left: 5%;
-            margin-right: 5%;
-        }
+        
         .divider{
             height: 3rem;
             border-width: 1px 0;
@@ -63,6 +52,11 @@
             </div>
             <div class="col-3 d-flex flex-row-reverse">
                 <ul class="nav nav-pills">
+                    <li class="nav-item mx-1">
+                        <a href="signup">
+                            <buttton class="btn btn-outline-dark">Register<buttton>
+                        </a>
+                    </li>
                     <li class="nav-item">
                         <a href="home">
                             <buttton class="btn btn-outline-dark">Login<buttton>
@@ -72,78 +66,8 @@
             </div>
         </div>
     </header>
-
     <div class="container-fluid divider"></div>
-
-    <div class="container-fluid main-container">
-        <div class="row main-row">
-            <div class="col-7">
-                <section class="login_form col-10 ">
-                    <h1 class="font-weight-bold py-3">Tailor Management System</h1>
-                            <h4>Sign into your account</h4>
-                            <form class="row">
-                                <section class="col-8">
-                                    <div class="form-row">
-                                        <input type="Name" placeholder="Name" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="Address" placeholder="Address" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <label for="Insert_img"> <h5>Insert photo</h5></label>
-                                        <input id="uploadImage" type="file" name="image" onchange="PreviewImage(); required">
-                                    </div>
-                                </section>
-                                <section class="col-4"></section>
-                                <section>
-                                    <a href="#">Forgot Password?</a>
-                                    <p style="margin-left:2px">Already have an Account?
-                                    <a href="home">  Login here</a></p>
-                                </section>
-                            </form>
-                </section>
-            </div>
-
-            <div class="col-5 d-flex">
-                <img src="/media/clothes.jpg" id="uploadPreview" alt="No_Image_found" class="welcome_img">
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid divider"></div>
-
-    <div class="container-fluid login" id="login">
-        <div class="row">
-            <div class="col-4 login_form">
-                    <div class="form-row">
-
-                    </div>
-            </div>
-            <div class="col-8 ">
-                <!-- <img src="/media/login.jpg" alt="No_Image_found" class="login_img"> -->
-            </div>
-        </div>
-    </div>
-</body>
-<script type="text/javascript">
-
-    function PreviewImage() {
-        var oFReader = new FileReader();
-        oFReader.readAsDataURL(document.getElementById("uploadImage").files[0]);
-
-        oFReader.onload = function (oFREvent) {
-            document.getElementById("uploadPreview").src = oFREvent.target.result;
-        };
-    };
-
-</script>   
+    {%block content%}
+    {% endblock %}
+    
 </html>
