--- a/templates/home.html
+++ b/templates/home.html
@@ -1,91 +1,12 @@
+{% extends 'frontpage.html'%}
 {% load  static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-    <style>
-        .header{
-            margin-top: 15px;
-            margin-bottom: 10px;
-        }
-        .welcome_img{
-            border-radius: 50%;
-            box-shadow: 10px 15px 50px rgba(52, 54, 54, 0.719);
-            max-width:400px;
-            height: 60vh;
-            margin: 20px;
-        }
-        .header_container{
-            box-shadow: 0px 10px 10px rgba(52, 54, 54, 0.1) ;
-            border-bottom: solid rgba(52, 54, 54, 0.1);
-            margin: 0px;
-        }
-        .main-container{
-            background-color: rgba(233, 233, 233, 0.171);
-            box-shadow: 10px 10px 25px whitesmoke;
-        }
-        .main-row{
-            padding-top: 25px;
-            margin-left: 5%;
-            margin-right: 5%;
-        }
-        .divider{
-            height: 3rem;
-            border-width: 1px 0;
-        }
-        .login_img{
-            width: 800px;
-            max-height: 100vh;
-        }
-
-
-    </style>
-    <script>
-function myFunction() {
-  alert("Hello! I am an alert box!");
-}
-
-
-    </script>
-
-</head>
-<body>
-<header class="container-fluid header_container">
-    <div class="row header">
-        <div class="col-5 d-flex">
-            <a href="/" class="logo align-items-center mb-3 text-dark text-decoration-none "
-               style="margin-right: auto;">
-                <span class="fs-4">Tailor Management System</span>
-            </a>
-        </div>
-        <div class="col-4 d-flex">
-            <ul class="nav nav-pills">
-                <li class="nav-item"><a href="#" class="nav-link link-secondary " aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="aboutus" class="nav-link link-dark">About us</a></li>
-                <li class="nav-item"><a href="service" class="nav-link link-dark">Service</a></li>
-            </ul>
-        </div>
-        <div class="col-3 d-flex flex-row-reverse">
-            <ul class="nav nav-pills">
-                <li class="nav-item">
-                    <a href="signup">
-                        <buttton class="btn btn-outline-dark">Sign up</buttton>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</header>
-
-<div class="container-fluid divider"></div>
-
+{%block content%}
+<style>
+    .hide{
+        display: none;
+    }
+</style>
+<link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css'%}">
 <div class="container-fluid main-container">
     <div class="row main-row">
         <div class="col-7">
@@ -97,7 +18,7 @@ function myFunction() {
                     {% csrf_token %}
                     <section class="col-8">
                         <div class="form-row">
-                            <input type="email" name="email" placeholder="xyz@gmail.com "
+                            <input onfocus="hideMessage()" type="email" name="email" placeholder="xyz@gmail.com "
                                    class="form-control rounded-pill my-3 p-2">
                         </div>
                         <div class="form-row">
@@ -107,7 +28,7 @@ function myFunction() {
                     </section>
                     {% if messages %}
                     {% for message in messages %}
-                    <h3 style="color:red">{{ message }}</h3>
+                    <h3 id ="success-msg" style="color:red">{{ message }}</h3>
                     {% endfor %}
                     {% endif %}
                     <button class="btn btn-primary">Login</button>
@@ -115,7 +36,7 @@ function myFunction() {
                     <section>
                         <a href="#">Forgot Password?</a>
                         <p style="margin-left:2px;">Don't have an Account?
-                            <a href="signup.html"> Register here</a></p>
+                            <a href="signup"> Register here</a></p>
                     </section>
                 </form>
             </section>
@@ -141,5 +62,9 @@ function myFunction() {
         </div>
     </div>
 </div>
-</body>
-</html>
+<script>
+    const hideMessage=()=>{
+        msid = document.querySelector('#success-msg').classList.add('hide');
+    }
+</script>
+{%endblock%}
