--- a/templates/navside.html
+++ b/templates/navside.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>nav-bar</title>
+    <title>TMS</title>
 
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/measurement.css'%}">
@@ -80,7 +80,7 @@
                         </a>
                     </li>
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="accounts">
+                        <a class="navigation-link" href="account">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-calculator"></i>
