--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,159 +1,86 @@
+{% extends 'frontpage.html'%}
 {% load  static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- css -->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+{%block content%}
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
+<style>
+    .insert_logo{
+        display: none;
+    }
+    .image-upload{
+        background-color: rgb(255, 255, 255);
+        border: 1px solid rgb(189, 187, 187);
+        color: grey;
+        padding: 5px 0px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 2px 10px;
+        width: 96%;
+        border-radius: 25px;
+    }
+    .main-row{
+        background-image: url('../media/signupbg.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        box-shadow: 5px 5px 5px #585755;
+    }
+    .regbtn{
+        margin: auto;
+    }
 
-    <style>
-        .header{
-            margin-top: 15px;
-            margin-bottom: 10px;
-        }
-        .welcome_img{
-            border-radius: 50%;
-            box-shadow: 10px 15px 50px rgba(52, 54, 54, 0.719);
-            width:400px;
-            height: 60vh;
-            margin: 20px;
-        }
-        .header_container{
-            box-shadow: 0px 10px 10px rgba(52, 54, 54, 0.1) ;
-            border-bottom: solid rgba(52, 54, 54, 0.1);
-            margin: 0px;
-        }
-        .main-container{
-            background-color: rgba(233, 233, 233, 0.171);
-            box-shadow: 10px 10px 25px whitesmoke;
-        }
-        .main-row{
-            padding-top: 25px;
-            margin-left: 5%;
-            margin-right: 5%;
-        }
-        .divider{
-            height: 3rem;
-            border-width: 1px 0;
-        }
-        .login_img{
-            width: 800px;
-            max-height: 100vh;
-        }
-    </style>
-</head>
-<body>
-    <header class="container-fluid header_container">
-        <div class="row header">
-            <div class="col-5 d-flex">
-                <a href="/" class="logo align-items-center mb-3 text-dark text-decoration-none " style="margin-right: auto;">
-                    <span class="fs-4">Tailor Management System</span>
-                </a>
-            </div>
-            <div class="col-4 d-flex">
-                <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link link-secondary " aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link link-dark">About us</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link link-dark">Service</a></li>
-                </ul>
-            </div>
-            <div class="col-3 d-flex flex-row-reverse">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a href="home">
-                            <buttton class="btn btn-outline-dark">Login<buttton>
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-
-    <div class="container-fluid divider"></div>
-
-    <div class="container-fluid main-container">
-        <div class="row main-row">
-            <div class="col-7">
-                <section class="login_form col-10 ">
-                    <h1 class="font-weight-bold py-3">Tailor Management System</h1>
-                            {% if reg_comp%}
-                            <form class="row">
-                                <section class="col-8">
-                                    <Label>Company Detail</Label>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Company Name" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Company number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <label for="Insert_img"> <h5>InsertLogo</h5></label>
-                                        <input id="uploadImage" type="file" name="image" onchange="PreviewImage(); required">
-                                    </div>
-                                    <hr>
-                                    <Label>Owner Detail</Label>
-                                    <div class="form-row">
-                                        <input type="text" placeholder=" Name" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                   
-                                    <div class="form-row">
-                                        <input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2">
-                                    </div>
-                                    <div class="form-row">
-                                        <label for="Insert_img"> <h5>Insert photo</h5></label>
-                                        <input type="file" name="owner_image" >
-                                    </div>
-                                    <button class="btn btn-dark">Register</button>
-                                </section>
-                                <section class="col-4"></section>
-                                <section>
-                                    <a href="#">Forgot Password?</a>
-                                    <p style="margin-left:2px">Already have an Account?
-                                    <a href="home">  Login here</a></p>
-                                </section>
-                            </form>
-                            {% endif %}
-                            
-                </section>
-            </div>
-
-            <div class="col-5 d-flex">
-                <img src="/media/clothes.jpg" id="uploadPreview" alt="No_Image_found" class="welcome_img">
-            </div>
-        </div>
-    </div>
-
-    <div class="container-fluid divider"></div>
-
-    <div class="container-fluid login" id="login">
-        <div class="row">
-            <div class="col-4 login_form">
-                    <div class="form-row">
-
+    .signup_form{
+        background-color: #58575523;
+        padding: 10px;
+        border-radius: 5px;
+    }
+    input[type=file]{
+        color:red;
+    }
+</style>
+<div class="container-fluid main-container">
+    <div class="row main-row">
+        <section class="col-10 ">
+            <h1 class="font-weight-bold py-3">Tailor Management System</h1>
+            {% if reg_comp%}
+            <form class="row">
+                <div class="col-6 signup_form mx-3">
+                    <h3 style="text-decoration: none;">Company Details</h3>
+                    <div class=" form_row row">
+                        <div class="col-4"><input type="text" placeholder="Company Name" class="form-control my-3 p-2"></div>
+                        <div class="col-4"><input type="text" placeholder="Company number"  pattern="[0-9]+" maxlength="10" class="form-control my-3 p-2"></div>
+                        <div class="col-4"><input type="text" placeholder="Address" class="form-control my-3 p-2"></div>
+                        <div class="image-upload btn" id="file-input">
+                             <label for="file-input">Insert logo<i class="attach-doc fa fa-paperclip" aria-hidden="true"></i> :</label>
+                            <input type="file" id="file-input" name="image">
+                        </div>
+                        
                     </div>
-            </div>
-            <div class="col-8 ">
-                <!-- <img src="/media/login.jpg" alt="No_Image_found" class="login_img"> -->
-            </div>
-        </div>
+
+                    <div class="container-fluid divider"></div>
+
+                    <h3 style="text-decoration: none;">Owner Details</h3>
+                    <div class="row">
+                        <div class="col-4"><input type="text" placeholder=" Name" class="form-control rounded-pill my-3 p-2"></div>
+                        <div class="col-4"><input type="text" placeholder="Address" class="form-control rounded-pill my-3 p-2"></div>
+                        <div class="col-4"><input type="text" placeholder="Phone number"  pattern="[0-9]+" maxlength="10" class="form-control rounded-pill my-3 p-2"></div>
+                        <div class="col-6"><input type="email" placeholder="Email address " class="form-control rounded-pill my-3 p-2"></div>
+                        <div class="col-6"><input type="password" placeholder="Password" class="form-control rounded-pill my-3 p-2"></div>
+                        <div class="image-upload mb-5 ">
+                            <label for="file-input">Insert Photo<i class="attach-doc fa fa-paperclip" aria-hidden="true"></i> :</label>
+                           <input type="file" id="file-input" name="owner_image">
+                       </div>
+                    </div>
+                    
+                    <div class="row regbtn mb-3"><button class="btn btn-primary">Register</button></div> 
+                </div>
+            </form>
+            {% endif %}   
+        </section>
+        <section class="col-2"></section>
     </div>
-</body>
+</div>
+
 <script type="text/javascript">
 
     function PreviewImage() {
@@ -166,4 +93,4 @@
     };
 
 </script>   
-</html>
+{%endblock%}
