employee milauna try

--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -27,7 +27,7 @@
             background-color: #e6e6e6;
         }
         .page .sidebar{
-            background: linear-gradient(35deg, #f3cf8d, #f5ba4d);
+            background:linear-gradient(290deg,#0dcaf078,#00c7be21);
             position: fixed;
             top: 0;
             left: 0;
