--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -160,7 +160,7 @@
             <div class="whiteboard col-9">
                 <div class="row">
                     <body>
-                    <div style="width: 600px; height: 550px;" id="wt-container"></div>
+                    <div style="width: 600px; height: 550px; border: 1px solid blacks;" id="wt-container"></div>
 
                     <script src="https://www.whiteboard.team/dist/api.js"></script>
                     <script type="text/javascript">
