--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,32 +2,14 @@
 {% block content%}
 <div class="container-fluid">
     <div class="row px-2"> 
-        <div class="card text-light bg-dark mb-3 col" style="max-width: 16rem;">
-            <div class="card-body">
-            <h5 class="card-title">No. of Order</h5>
-            <label class="card-text" name="order_count">10<label>
+        <div class="col-6 col-lg-3">
+            <div class="box bg-info" style="max-width: 15rem;">
+                <div class="box-content">
+                <h5 class="box-title">No. of Order</h5>
+                <label class="box-text" name="order_count">10<label>
+                </div>
             </div>
         </div>
-        <div class="card text-light bg-dark mb-3 col" style="max-width: 16rem;">
-            <div class="card-body">
-            <h5 class="card-title">Total</h5>
-            <label class="card-text" name="total">10<label>
-            </div>
-        </div>
-        <div class="card text-light bg-dark mb-3 col" style="max-width: 16rem;">
-            <div class="card-body">
-            <h5 class="card-title">No of Customer</h5>
-            <label class="card-text" name="customer_count">10<label>
-            </div>
-        </div>
-        <div class="card text-light bg-dark mb-3 col" style="max-width: 16rem;">
-            <div class="card-body">
-            <h5 class="card-title">Receivable</h5>
-            <label class="card-text" name="remaining">10<label>
-            </div>
-        </div>
-    </div>
-    <div class="row">
         
     </div>
 </div>
