--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -16,16 +16,15 @@
                             <tr>
                                 <th class="th">#</th>
                                 <th class="th">Name</th>
-                                <th class="th">Email</th>
-                                <th class="th">Number</th>
                                 <th class="th">Address</th>
-                                <th class="th">Status</th>
-                                <th class="th" colspan="2">Edit</th>
-                                <style>
+                                <th class="th">Number</th>
+                                <th class="th">Email</th>
+                                <th class="th" >Change</th>
+                                <!-- <style>
                                     .th{
                                         text-align: center;
                                     }
-                                </style>
+                                </style> -->
                             </tr>
                         </thead>
                         <tbody>
@@ -35,9 +34,8 @@
                                 <td><label for="total" name="total"></label></td>
                                 <td><label for="advance" name="advance"></label></td>
                                 <td><label for="remaning" name="remaining"></label></td>
-                                <td ><div class="form-check form-switch"><input class="form-check-input center" type="checkbox" id="flexSwitchCheckDefault"></div></td>
-                                <td><button class="btn btn-dark">Change</button></td>
-                                <td><button class="btn btn-dark">Delete</button></td>
+                                <td><button class="btn btn-dark">Edit</button>
+                                <button class="btn btn-dark">Remove</button></td>
                               </tr>
                         </tbody>
                     </table>
