employee detail display

--- a/templates/employeelanding.html
+++ b/templates/employeelanding.html
@@ -19,8 +19,7 @@
                                 <th class="th">Email</th>
                                 <th class="th">Number</th>
                                 <th class="th">Address</th>
-                                <th class="th">Status</th>
-                                <th class="th" colspan="2">Edit</th>
+                                <th class="th" colspan="2">Actions</th>
                                 <style>
                                     .th{
                                         text-align: center;
@@ -29,16 +28,17 @@
                             </tr>
                         </thead>
                         <tbody>
+                        {% for e in emp_detail %}
                             <tr>
-                                <th scope="row">1</th>
-                                <td><a href="#"><label for="name" name="name"></label></a></td>
-                                <td><label for="total" name="total"></label></td>
-                                <td><label for="advance" name="advance"></label></td>
-                                <td><label for="remaning" name="remaining"></label></td>
-                                <td ><div class="form-check form-switch"><input class="form-check-input center" type="checkbox" id="flexSwitchCheckDefault"></div></td>
-                                <td><button class="btn btn-dark">Change</button></td>
-                                <td><button class="btn btn-dark">Delete</button></td>
+                                <th scope="row">{{e.id}}</th>
+                                <td><a href="#"><label for="name" name="name">{{e.name}}</label></a></td>
+                                <td><label for="total" name="total">{{e.email}}</label></td>
+                                <td><label for="advance" name="advance">{{e.number}}</label></td>
+                                <td><label for="remaning" name="remaining">{{e.address}}</label></td>
+                                <td class="th"><button class="btn btn-dark">Change</button>
+                                <button class="btn btn-dark">Delete</button></td>
                               </tr>
+                        {% endfor %}
                         </tbody>
                     </table>
                 </div>
