category in mesurement billing bndaicha

--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -96,6 +96,13 @@
 
         <section class="customer_measurement container-fluid row">
             <div class="measurement_table col-3">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>Category</option>
+                    <option value="1">Blouse</option>
+                    <option value="2">Trouser</option>
+                    <option value="3">Tops</option>
+                    <option value="99">Add Category</option>
+                  </select>
                 <table class="table mytable">
                     <thead>
                     <tr>
