multiple category select

--- a/templates/Measurement.html
+++ b/templates/Measurement.html
@@ -96,12 +96,10 @@
 
         <section class="customer_measurement container-fluid row">
             <div class="measurement_table col-3">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Category</option>
-                    <option value="1">Blouse</option>
-                    <option value="2">Trouser</option>
-                    <option value="3">Tops</option>
-                    <option value="99">Add Category</option>
+                <select name="category" multiple data-live-search="true" class="form-select selectpicker" aria-label="Default select example">
+                {% for c in category %}
+                    <option value={{c.id}} selected>{{c.name}}</option>
+                {% endfor %}
                   </select>
                 <table class="table mytable">
                     <thead>
@@ -228,7 +226,11 @@
             };
         };
     
-
+        $('select').selectpicker();
 </script>
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/css/bootstrap-select.css" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js"></script>
 {%endblock%}
