--- a/templates/frontpage.html
+++ b/templates/frontpage.html
@@ -16,12 +16,14 @@
             margin-bottom: 10px;
         }
         .header_container{
-            box-shadow: 0px 10px 10px rgba(52, 54, 54, 0.1) ;
-            border-bottom: solid rgba(52, 54, 54, 0.1);
-            margin: 0px;
+            box-shadow: 0px 1px 10px rgba(236, 236, 236, 0.1) ;
+            /* border-bottom: solid rgba(52, 54, 54, 0.1); */
+            margin-left: 15px;
+            margin-right: 15px;
+
         }
         .main-container{
-            background-color: rgba(233, 233, 233, 0.171);
+            background-color: rgba(233, 233, 233, 0.1);
             box-shadow: 10px 10px 25px whitesmoke;
         }
         
@@ -33,13 +35,16 @@
             width: 800px;
             max-height: 100vh;
         }
+        .btnText{
+            color: #212529;
+        }
     </style>
 </head>
 <body>
-    <header class="container-fluid header_container">
+    <header class=" header_container">
         <div class="row header">
             <div class="col-5 d-flex">
-                <a href="/" class="logo align-items-center mb-3 text-dark text-decoration-none " style="margin-right: auto;">
+                <a href="home" class="logo align-items-center mb-3 text-dark text-decoration-none " style="margin-right: auto;">
                     <span class="fs-4">Tailor Management System</span>
                 </a>
             </div>
@@ -54,19 +59,18 @@
                 <ul class="nav nav-pills">
                     <li class="nav-item mx-1">
                         <a href="signup">
-                            <buttton class="btn btn-outline-dark">Register<buttton>
+                            <buttton class="btn btn-outline-secondary btnText">Register<buttton>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="home">
-                            <buttton class="btn btn-outline-dark">Login<buttton>
+                            <buttton class="btn btn-outline-secondary btnText">Login<buttton>
                         </a>
                     </li>
                 </ul>
             </div>
         </div>
     </header>
-    <div class="container-fluid divider"></div>
     {%block content%}
     {% endblock %}
     
