--- a/templates/home.html
+++ b/templates/home.html
@@ -5,66 +5,61 @@
     .hide{
         display: none;
     }
+    .loginForm div .form-control{
+        margin-top: 18px;
+        margin-right: 15px;
+        border-radius: 90px;
+    }
+    .headTms{
+        font-weight: bold;
+        margin-right: 25px;
+      
+    }
+    .main-row {
+    padding-top: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+    }
+    .welcome_img{
+    /* border-radius: 50%; */
+    box-shadow: 10px 15px 50px rgba(52, 54, 54, 0.719);
+    max-width:400px;
+    height: 60vh;
+    margin-left: 500px;
+    }
+    .loginbtn{
+        margin-left: 70%;
+        padding-top: 9px;
+    }
 </style>
 <link rel="stylesheet" type="text/css" href="{% static 'css/homepage.css'%}">
-<div class="container-fluid main-container">
-    <div class="row main-row">
-        <div class="col-7">
-            <section class="login_form col-10 ">
-                <h1 class="font-weight-bold py-3">Tailor Management System</h1>
-                <h4>Sign into your account</h4>
-
-                <form class="row" method="post" action="login">
-                    {% csrf_token %}
-                    <section class="col-8">
-                        <div class="form-row">
-                            <input onfocus="hideMessage()" type="email" name="email" placeholder="xyz@gmail.com "
-                                   class="form-control rounded-pill my-3 p-2">
-                        </div>
-                        <div class="form-row">
-                            <input type="password" name="password" placeholder="*******"
-                                   class="form-control rounded-pill my-3 p-2">
-                        </div>
-                    </section>
-                    {% if messages %}
-                    {% for message in messages %}
-                    <h3 id ="success-msg" style="color:red">{{ message }}</h3>
-                    {% endfor %}
-                    {% endif %}
-                    <button class="btn btn-primary">Login</button>
-                    <section class="col-4"></section>
-                    <section>
-                        <a href="#">Forgot Password?</a>
-                        <p style="margin-left:2px;">Don't have an Account?
-                            <a href="signup"> Register here</a></p>
-                    </section>
-                </form>
-            </section>
-        </div>
-
-        <div class="col-5 d-flex">
-            <img src="/media/home.jpg" alt="No_Image_found" class="welcome_img">
-        </div>
-    </div>
-</div>
-
-<div class="container-fluid divider"></div>
-
-<div class="container-fluid login" id="login">
-    <div class="row">
-        <div class="col-4 login_form">
-            <div class="form-row">
-
+<div class="container-fluid">
+    <div class="main-row">
+        <form class="loginForm" method="post" action="login">
+            {% csrf_token %}
+            <div class="row">
+                <h1 class="d-flex justify-content-start headTms py-3">Tailor Management System</h1>
+                <div class="col-4">
+                    
+                    <h4 class="d-flex justify-content-start">Sign into your account </h4>
+                    <div class="d-flex flex-column"><input onfocus="hideMessage()" type="email" name="email" placeholder="Email Address" class="form-control"></div>
+                    <div class="d-flex flex-column"><input type="password" name="password" placeholder="Password" class="form-control"></div>
+                        {% if messages %}
+                            {% for message in messages %}
+                            <h3 id ="success-msg" style="color:red">{{ message }}</h3>
+                            {% endfor %}
+                        {% endif %}
+                    <div class="d-flex flex-column loginbtn"><button class="btn btn-primary">Login</button></div> 
+                    <div class="d-flex flex-row justify-content-start py-1"><a href="#">Forgot Password?</a></div>
+                    <div class="d-flex flex-row justify-content-start">Don't have an Account? &nbsp; <a href="signup"> Register here</a></div>
+                </div>
+                <div class="col-3"></div>
+                <div class="col-3">
+                    <img src="/media/home.jpg" alt="No_Image_found" class="welcome_img" >
+                </div>
             </div>
-        </div>
-        <div class="col-8 ">
-            <!-- <img src="/media/login.jpg" alt="No_Image_found" class="login_img"> -->
-        </div>
+            
+        </form>
     </div>
 </div>
-<!-- <script>
-    const hideMessage=()=>{
-        msid = document.querySelector('#success-msg').classList.add('hide');
-    }
-</script> -->
 {%endblock%}
