--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,16 +1,125 @@
 {% extends 'navside.html'%}
+
 {% block content%}
-<div class="container-fluid">
-    <div class="row px-2"> 
-        <div class="col-6 col-lg-3">
-            <div class="box bg-info" style="max-width: 15rem;">
-                <div class="box-content">
-                <h5 class="box-title">No. of Order</h5>
-                <label class="box-text" name="order_count">10<label>
+<style>
+    .card{
+        border:d solid 1px #ddc9b7 ;
+        box-shadow: 4px 5px #ddc9b7;
+        /* margin-left: 12px; */
+    }
+</style>
+<div class="container-fluid ">
+    <section class="">
+        <div class="row">
+            <!-- 1 -->
+            <div class="col-3">
+            <div class="card">
+                <div class="d-flex flex-row p-3">
+                    <div class="flex-column ">
+                        <div class="card-content">
+                            <h6>No. of Orders</h6>
+                        </div>
+                        <div class="card-txt">
+                            <label for="detail">901823</label>
+                        </div>
+                    </div>
+                    <div class="flex-column">
+                        <img src="" alt="">
+                    </div>
                 </div>
             </div>
+            </div>
+            <!-- 1 end -->
+            <!-- 2 -->
+            <div class="col-3">
+                <div class="card">
+                <div class="d-flex flex-row p-3">
+                    <div class="flex-column ">
+                        <div class="card-content">
+                            <h6>No. of Orders</h6>
+                        </div>
+                        <div class="card-txt">
+                            <label for="detail">901823</label>
+                        </div>
+                    </div>
+                    <div class="flex-column">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- 2 end -->
+            <!-- 3 -->
+            <div class="col-3">
+                <div class="card">
+                <div class="d-flex flex-row p-3">
+                    <div class="flex-column ">
+                        <div class="card-content">
+                            <h6>No. of Orders</h6>
+                        </div>
+                        <div class="card-txt">
+                            <label for="detail">901823</label>
+                        </div>
+                    </div>
+                    <div class="flex-column">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- 3 end -->
+            <!-- 4 -->
+            <div class="col-3">
+                <div class="card">
+                <div class="d-flex flex-row p-3">
+                    <div class="flex-column ">
+                        <div class="card-content">
+                            <h6>No. of Orders</h6>
+                        </div>
+                        <div class="card-txt">
+                            <label for="detail">901823</label>
+                        </div>
+                    </div>
+                    <div class="flex-column">
+                        <img src="" alt="">
+                    </div>
+                </div>
+                </div>
+            </div>
+            <!-- 4 end -->
         </div>
-        
-    </div>
+    </section>
 </div>
+    <section style="margin-top: 3px;">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-6" style="margin-left: 3px;">
+                    <h5>List of Employee</h5>
+                    <table class="table">
+                        <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Role</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Mark</td>
+                            <td>@mdo</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>Jacob</td>
+                            <td>@fat</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-6"></div>
+            </div>
+        </div>
+    </section>
+    
 {% endblock%}
