--- a/templates/navside.html
+++ b/templates/navside.html
@@ -87,13 +87,13 @@
                         </a>
                     </li>
                     <li class="navigation-list-item">
-                        <a class="navigation-link" href="customer">
+                        <a class="navigation-link" href="order">
                             <div class="row">
                                 <div class="col-2">
                                     <i class="fa fa-address-book"></i>
                                 </div>
                                 <div class="col-10">
-                                    Customer
+                                    Orders
                                 </div>
                             </div>
                         </a>
