--- a/static/css/sidebar.css
+++ b/static/css/sidebar.css
@@ -27,7 +27,7 @@
             background-color: #e6e6e6;
         }
         .page .sidebar{
-            background: salmon;
+            background: darkslategray;
             position: fixed;
             top: 0;
             left: 0;
